force-app/main/default/objects/Product__c/fields/Cargo_Type__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Type__c</fullName>
    <label>Cargo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valuable Shipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>