force-app/main/default/objects/Product__c/fields/Is_In_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_In_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is In Active</label>
    <type>Checkbox</type>
</CustomField>