force-app/main/default/objects/Product__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ValSHIP</fullName>
            </value>
            <value>
                <fullName>GoldSHIP</fullName>
            </value>
            <value>
                <fullName>SilverSHIP</fullName>
            </value>
            <value>
                <fullName>LuxeSHIP</fullName>
            </value>
            <value>
                <fullName>ExhibiSHIP</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>