force-app/main/default/objects/Product__c/fields/Product_Group_Master_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Master_Name__c</fullName>
    <label>Product Group Master Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kalyan Jewellers</fullName>
            </value>
            <value>
                <fullName>PC Chandra Jewellers</fullName>
            </value>
            <value>
                <fullName>Tanishq</fullName>
            </value>
            <value>
                <fullName>Titan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>