force-app/main/default/objects/Product__c/fields/Remark_1__c.field-meta.xml
<CustomField>
    <fullName>Remark_1__c</fullName>
    <label>Remark 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>