force-app/main/default/objects/Product__c/fields/Remark_2__c.field-meta.xml
<CustomField>
    <fullName>Remark_2__c</fullName>
    <label>Remark 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>