force-app/main/default/objects/Product__c/fields/SAC_Code__c.field-meta.xml
<CustomField>
    <fullName>SAC_Code__c</fullName>
    <label>SAC Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>