force-app/main/default/objects/Product__c/fields/Sub_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product_Category__c</fullName>
    <label>Sub Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold jewellery</fullName>
            </value>
            <value>
                <fullName>Silver Jewellery</fullName>
            </value>
            <value>
                <fullName>Silver Bricks</fullName>
            </value>
            <value>
                <fullName>Gold Bars</fullName>
            </value>
            <value>
                <fullName>Coins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>