force-app/main/default/objects/Product__c/fields/Unit_Master_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Master_Name__c</fullName>
    <label>Unit Master Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>